--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^17.0.2",    
     "react-loader-spinner": "^6.0.0-0",
+    "react-multi-carousel": "^2.8.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
