--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "bootstrap": "^5.1.3",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^6.0.0-0",
     "react-multi-carousel": "^2.8.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-super-responsive-table": "^5.2.0",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
     "simple-react-lightbox": "^3.6.9-0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
