--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "jwt-decode": "^3.1.2",
+    "primereact": "^8.0.0-rc.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^6.0.0-0",
