--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "qrcode.react": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-loader-spinner": "^6.0.0-0",
     "react-multi-carousel": "^2.8.0",
     "react-phone-input-2": "^2.15.0",
