--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.45.2",
     "react-loader-spinner": "^6.0.0-0",
     "react-multi-carousel": "^2.8.0",
     "react-phone-input-2": "^2.15.0",
