--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-simple-captcha": "^9.0.17",
     "react-to-pdf": "^0.0.14",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
+    "svg-captcha": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
