--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.7.4",
     "react-simple-captcha": "^9.0.17",
     "react-to-pdf": "^0.0.14",
     "redux": "^4.1.2",
