--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "docx-preview": "^0.1.18",
     "jwt-decode": "^3.1.2",
     "pdfjs-dist": "^2.16.105",
     "prime-react": "^1.0.0",
     "primereact": "^8.0.0-rc.1",
     "qrcode.react": "^3.1.0",
     "react": "^17.0.2",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^17.0.2",
+    "react-file-viewer": "^1.2.1",
     "react-hook-form": "^7.45.2",
     "react-loader-spinner": "^6.0.0-0",
     "react-multi-carousel": "^2.8.0",
@@ -25,7 +28,6 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "react-select": "^5.7.4",
     "react-simple-captcha": "^9.0.17",
     "react-to-pdf": "^0.0.14",
     "redux": "^4.1.2",
