--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "primereact": "^8.0.0-rc.1",
     "qrcode.react": "^3.1.0",
     "react": "^17.0.2",
+    "react-dialog-confirm": "^1.0.3",
     "react-dom": "^17.0.2",
     "react-file-viewer": "^1.2.1",
     "react-hook-form": "^7.45.2",
